# pkarr

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING (1).md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  RELEASE.md  build-wasm.sh  deny.toml  docker-compose.yml  flake.nix  relays.txt  resolvers.txt  servers.txt  test-nodejs.js
.github/: dependabot.yml
.github/workflows/: build-artifacts.yaml  build-artifacts.yml  ci-rust.yaml  ci-wasm.yaml  docker.yml  js-binding.yaml  release.yaml  rust.yaml  wasm.yaml
.scripts/: build-artifacts.sh
bindings/js/: Cargo.toml  README.md  build-wasm.sh  build.rs
bindings/js/pkg/: .gitignore  LICENCE  README.md  example.js  node-header.cjs  package.json  svcb-validation.js
bindings/js/pkg/test/: all.js  edge-cases.js  helpers.js  integration.js  svcb.js  unit.js
bindings/js/src/: builder.rs  client.rs  constants.rs  error.rs  keypair.rs  lib.rs  signed_packet.rs  utils.rs
bindings/js/src/dns/: mod.rs
bindings/js/src/dns/svcb/: constants.rs  input.rs  mod.rs  output.rs  utils.rs
bindings/js/src/wasm/: client.rs  constants.rs  mod.rs  signed_packet.rs
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: main.rs
design/: README.md  base.md  bridges.md  endpoints.md  relays.md  resolvers.md  tls.md  uri.md
docker/relay/: Dockerfile  build.sh
docs/: features.md  integration.md  introduction.md  quickstart.md
examples/browser/: package.json
examples/browser/src/: index.html  index.js  pkarr.js
examples/webapp/: .babelrc  package.json
examples/webapp/src/: index.html  index.js  store.js
ffi/: Cargo.toml
ffi/scripts/: build_swift.sh
ffi/src/: lib.rs
js/: README.md  bin.js  browser.js  index.js  nat.js  package.json  relayed.js  start.js  tsconfig.json
js/benchmarks/: README.md  compression-vs-encoding.js  package.json
js/benchmarks/republish/: README.md  generate.js  package.json  republish.js  sampler.js
js/lib/: client.js  codec.js  dht.browser.js  dht.js  relay.js  republisher.js  server.js  signed_packet.js  tools.js
js/lib/relay/: client.js  server.js  shared.js
js/scripts/: fix-cjs-build.sh  fix-esm-build.sh
js/server/: README.md  index.js  package.json
js/test/: codec.js  dht.js  e2e.js  signed_packet.js
pkarr/: CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  build.rs
pkarr/examples/: README.md  benchmark.rs  bootstrap.rs  decode.rs  http-get.rs  http-serve.rs  publish.rs  relay-client.rs  resolve-most-recent.rs  resolve.rs  resolver.rs
pkarr/examples/async/: publish.rs  relay-client.rs  resolve-most-recent.rs  resolve.rs
pkarr/pkg/: README.md  example.js  package.json
pkarr/pkg/examples/: advanced.js  base.js
pkarr/pkg/test/: all.js  edge-cases.js  helpers.js  integration.js  performance.js  unit.js
pkarr/src/: README.md  async_client.rs  bep44.rs  cache.rs  client.rs  client_async.rs  dht.rs  endpoints.rs  error.rs  keys.rs  lib.rs  main.rs  prelude.rs  relay.rs  relay_client.rs  relay_client_async.rs  relay_client_web.rs  resolve_policy.rs  signed_packet.rs  svcb.rs  wasm.rs
pkarr/src/base/: cache.rs  keys.rs  mod.rs  signed_packet.rs  time.rs  timestamp.rs
pkarr/src/client/: blocking.rs  builder.rs  cache.rs  client.rs  client_impl.rs  dht.rs  errors.rs  futures.rs  mod.rs  native.rs  relay.rs  relays.rs  shared.rs  tests.rs  tests_web.rs  web.rs
pkarr/src/client/backend/: backend_impl.rs  both.rs  cache_context.rs  combined.rs  dht.rs  mod.rs  publish_result_accumulator.rs  publish_results.rs  relay.rs  relays.rs  resolve_policy.rs  resolve_result_accumulator.rs  resolve_results.rs
pkarr/src/client/native/: actor_thread.rs  builder.rs  dht.rs  relays.rs
pkarr/src/dht/: async.rs  client.rs  error.rs  info.rs  mod.rs  report_policy.rs  resolve.rs  resolve_report.rs  resolve_response.rs
pkarr/src/extra/: fs.rs  lmdb_cache.rs  mod.rs  reqwest.rs  tls.rs
pkarr/src/extra/endpoints/: endpoint.rs  mod.rs  resolver.rs
pkarr/src/packet/: builder.rs  mod.rs  signed.rs
pkarr/src/types/: keys.rs  mod.rs  resolve_policy.rs  signed_packet.rs
pkarr/src/wasm/: builder.rs  client.rs  error.rs  keypair.rs  mod.rs  signed_packet.rs  test.rs  utils.rs
relay/: CHANGELOG.md  Cargo.toml  README.md  build.rs  config.example.toml
relay/src/: config.example.toml  config.rs  dht_server.rs  dht_service.rs  error.rs  extractors.rs  handlers.rs  index.html  index.rs  lib.rs  main.rs  rate_limiting.rs  real_ip.rs  response.rs
relay/src/quota_config/: mod.rs  request_count_quota.rs  time_unit.rs
relay/src/rate_limiter/: extract_ip.rs  layer.rs  mod.rs
relay/tests/: rate_limiting.rs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/rr/: header.rs
server/: Cargo.toml  README.md
server/src/: cache.rs  config.example.toml  config.rs  config.toml  dht_server.rs  error.rs  handlers.rs  http_server.rs  lib.rs  main.rs  rate_limiting.rs  server.rs
server/src/server/: handlers.rs
