[workspace]
members = [
  "pkarr", "relay", "bindings/js",
]

resolver = "3"

[workspace.metadata.crane]
name = "pkarr"

[workspace.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
simple-dns = { version = "0.11.2" }
