[workspace]
members = [
  "pkarr", "relay", "bindings/js",
]

resolver = "3"

[workspace.metadata.crane]
name = "pkarr"

[workspace.dependencies]
reqwest = { version = "0.13", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
simple-dns = { version = "0.11.2" }
# Pinned: digest 0.11.0-rc.11+ removed crypto_common re-export, breaking curve25519-dalek
# See: https://github.com/pubky/mainline/issues/80
digest = "=0.11.0-rc.9"
