[package]
name = "pkarr-cli"
version = "0.1.2"
authors = ["Nuh <nuh@nuh.dev>"]
edition = "2021"
description = "Pkarr cli"
license = "MIT"
homepage = "https://pkarr.org"
repository = "https://git.pkarr.org"
keywords = ["pkarr", "relay", "mainline", "dht"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[[bin]]
name = "pkarr"  # This sets the binary name to `pkarr`
path = "src/main.rs"  # This is the default, so you can omit it if desired

[dependencies]
pkarr = "3.8.0"
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.28", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[package.metadata.docs.rs]
all-features = true
