[package]
name = "pkarr-relay"
version = "0.11.5-rc.0"
rust-version = "1.85"
authors = [
    "Nuh <nuh@nuh.dev>",
    "SeverinAlexB <severin@synonym.to>",
    "SHAcollision <shacollision@synonym.to>",
]
edition = "2021"
description = "Pkarr relay (https://github.com/pubky/pkarr/blob/main/design/relays.md)"
license = "MIT"
homepage = "https://pkdns.net"
repository = "https://github.com/pubky/pkarr"
keywords = ["pkarr", "relay", "mainline", "dht"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
rustls = { workspace = true }
http = "1.4.0"
thiserror = "2.0.18"
bytes = "1.11.1"
tower_governor = "0.8.0"
governor = "0.10.4"
tower = "0.5.0"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
clap = { version = "4.5.57", features = ["derive"] }
dirs-next = "2.0.0"
httpdate = "1.0.3"
url = "2.5.8"
ipnet = { version = "2.11.0", features = ["serde"] }
pkarr = { path = "../pkarr", version = "6.0.0-rc.0", default-features = false, features = [
    "dht",
    "lmdb-cache",
] }

[dev-dependencies]
reqwest = "0.12"

[package.metadata.docs.rs]
all-features = true
