[package]
name = "pkarr-relay"
version = "0.11.6"
rust-version = "1.85"
authors = [
    "Nuh <nuh@nuh.dev>",
    "SeverinAlexB <severin@synonym.to>",
    "SHAcollision <shacollision@synonym.to>",
]
edition = "2021"
description = "Pkarr relay (https://github.com/pubky/pkarr/blob/main/design/relays.md)"
license = "MIT"
homepage = "https://pkdns.net"
repository = "https://github.com/pubky/pkarr"
keywords = ["pkarr", "relay", "mainline", "dht"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum-server = "0.8"
http = "1.4.0"
bytes = "1.11.1"
tower_governor = { version = "0.8.0", default-features = false, features = ["axum"] }
governor = { version = "0.10.4", default-features = false}
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
clap = { version = "4.5.57", features = ["derive"] }
httpdate = "1.0.3"
url = "2.5.8"
pkarr = { path = "../pkarr", version = "5.0", default-features = false, features = [
    "dht",
    "lmdb-cache",
] }

[package.metadata.docs.rs]
all-features = true
