[package]
name = "pkarr-relay"
version = "1.0.0"
rust-version = "1.85"
authors = [
    "Nuh <nuh@nuh.dev>",
    "SeverinAlexB <severin@synonym.to>",
    "SHAcollision <shacollision@synonym.to>",
]
edition = "2021"
description = "Pkarr relay (https://github.com/pubky/pkarr/blob/main/design/relays.md)"
default-run = "pkarr-relay"
license = "MIT"
homepage = "https://pkdns.net"
repository = "https://github.com/pubky/pkarr"
keywords = ["pkarr", "relay", "mainline", "dht"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-server = "0.8"
http = "1"
bytes = "1"
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
governor = { version = "0.10", default-features = false}
serde = { version = "1", features = ["derive"] }
toml = "1"
clap = { version = "4", features = ["derive"] }
httpdate = "1"
url = "2"
pkarr = { path = "../pkarr", version = "7", default-features = false, features = [
    "dht",
    "lmdb-cache",
] }

[dev-dependencies]
reqwest = { workspace = true }

[package.metadata.docs.rs]
all-features = true
