[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
pkarr = { version = "1.1.4", path = "../pkarr", features = ["async"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
http = "1.1.0"
thiserror = "1.0.49"
bytes = "1.6.0"
serde = { version = "1.0.198", features = ["derive"] }
