[package]
name = "pkarr-server"
version = "0.1.0"
authors = ["Nuh <nuh@nuh.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-server = { version = "0.7.0", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
http = "1.1.0"
thiserror = "1.0.49"
bytes = "1.7.1"
tower_governor = "0.4.2"
governor = "0.6.3"
heed = { version = "0.20.0", default-features = false }
byteorder = "1.5.0"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8.12"
clap = { version = "4.5.1", features = ["derive"] }
dirs-next = "2.0.0"
pkarr = { version = "2.2.0", path = "../pkarr", features = ["async"] }
