[package]
name = "pkarr-server"
version = "0.1.0"
authors = ["Nuh <nuh@nuh.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
http = "1.2.0"
thiserror = "1.0.69"
bytes = "1.9.0"
tower_governor = "0.4.3"
governor = "0.6.3"
heed = { version = "0.20.5", default-features = false }
byteorder = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
clap = { version = "4.5.26", features = ["derive"] }
dirs-next = "2.0.0"
pkarr = { version = "2.3.0", path = "../pkarr", features = ["async"] }
