[package]
name = "pkarr-js"
version = "3.8.0"
rust-version = "1.85"
authors = ["Nuh <nuh@nuh.dev>"]
edition = "2021"
description = "JavaScript/WebAssembly bindings for Pkarr - Public-Key Addressable Resource Records"
homepage = "https://pkdns.net"
repository = "https://github.com/pubky/pkarr"
license = "MIT"
readme = "README.md"
keywords = ["pkarr", "dns", "wasm", "javascript", "webassembly"]
categories = ["network-programming", "wasm"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core pkarr dependency - always enable relays since JS bindings require them
pkarr = { path = "../../pkarr", default-features = false, features = ["relays"] }

# WASM dependencies - shared directly or transitively
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"

# Dependencies needed by the WASM bindings
simple-dns = { version = "0.9.3" }
ntimestamp = { version = "1.0.0", features = ["full"] }
thiserror = "2.0.11"
url = { version = "2.5.4" }
futures-lite = { version = "2.6.0", default-features = false, features = ["std"] }

# Required for WASM target
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
console_log = { version = "1.0.0", features = ["color"] }

[build-dependencies]
cfg_aliases = "0.2.1"

[package.metadata.docs.rs]
all-features = true 
